Refactors mocks, error handling and add service tests
